<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".geenVoorkeurFragment"
    android:background="@drawable/background_2">

    <ImageView
        android:id="@+id/gv_icoon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/geenvoorkeur_icoon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.046" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/geen_voorkeur"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.248" />

    <Button
        android:id="@+id/terug_gv"
        style="?borderlessButtonStyle"
        android:layout_width="39dp"
        android:layout_height="20dp"
        android:background="@drawable/terug"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039" />

    <Button
        android:id="@+id/home_gv"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="26dp"
        android:layout_height="22dp"
        android:background="@drawable/home_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.036" />

    <TextView
        android:id="@+id/koptext2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/geen_voorkeur"
        android:textColor="@color/gray"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.345" />

    <Button
        android:id="@+id/afspraak_gv_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/afspraak_inplannen_btn"
        style="?android:attr/borderlessButtonStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.938" />

    <TextView
        android:id="@+id/beschrijving1"
        android:layout_width="335dp"
        android:layout_height="163dp"
        android:text="@string/wanneer_u_geen_voorkeur_opgeeft_wordt_u_automatisch_ingedeeld_bij_een_van_onze_medewerkers_dit_hangt_af_van_de_gewenste_tijd_en_datum_die_u_opgeeft_onze_medewerkers_bestaan_uit_hugo_degens_mark_van_duin_en_hannah_houten_geen_zorgen_als_u_geen_persoonlijke_voorkeur_heeft_want_bij_de_barber_shop_werken_de_beste_medewerkers_die_er_alles_aan_doen_om_u_tevreden_te_stellen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.551" />

    <TextView
        android:id="@+id/beschrijving2"
        android:layout_width="338dp"
        android:layout_height="86dp"
        android:text="@string/meer_weten_over_onze_medewerkers_bekijk_dan_de_persoonlijke_pagina_s_onder_de_categorie_team_op_onze_homepagina"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.748" />

</androidx.constraintlayout.widget.ConstraintLayout>